fixed some spacing

--- a/client/src/components/DataTable.css
+++ b/client/src/components/DataTable.css
@@ -1,22 +1,12 @@
-
-.table{
-    border-radius: 100px;
-}
-
-
-
 th{
     color:white;
    
-    
-    
 }
 
 tr{
    color:white;
     background-color: rgb(33, 42, 49);
-    
-    
+   
 }
 
 input{
